# acpica

./: CMakeLists.txt  hidden-symbols.txt
source/include/platform/: acenv.h  acnaos.h
